--- a/assets/style.scss
+++ b/assets/style.scss
@@ -246,8 +246,6 @@ button {
     img {
         max-width: 600px;
         max-height: 500px;
-        width: 100%;
-        // height: auto;
         animation: fadeIn 1s linear;
 
         @keyframes fadeIn {
@@ -362,10 +360,10 @@ button {
 .tax-top {
     width: 100%;
     height: 400px;
-    background: url(../img/tax-color.jpeg) 80%;
+    background: url(../img/tax-color.jpeg) 100% 80%;
     background-size: cover;
 
-    h2,
+    p,
     h1 {
         position: relative;
         left: 10%;
@@ -381,6 +379,7 @@ button {
 
         .img-wrapper {
             overflow: hidden;
+            width: 100%;
 
             &:hover {
 
@@ -685,18 +684,31 @@ small {
         flex-direction: column;
     }
 
+
+    .tax-top {
+        margin-bottom: 2rem;
+
+        h1 {
+            font-size: 1.5rem;
+        }
+
+
+    }
+
+    .tax-container {
+
+        .text-wrapper {
+            span {
+                flex-direction: row;
+            }
+        }
+    }
+
     .popular-wrapper.flex,
     .archive-item.flex {
         flex-direction: column;
     }
 
-    .top-wrapper {
-
-        img {
-            width: 300px;
-            height: 400px;
-        }
-    }
 
     .text-wrapper {
         h2 {
