--- a/assets/style.scss
+++ b/assets/style.scss
@@ -672,13 +672,10 @@ small {
 
     nav {
         .menu-item-has-children {
-            position: relative;
 
 
             .sub-menu {
-                position: absolute;
-                width: max-content;
-                display: block;
+                box-shadow: none;
                 margin: 1rem;
 
                 li {
