--- a/assets/style.scss
+++ b/assets/style.scss
@@ -62,6 +62,7 @@ body {
 
 small {
     display: block;
+    color: darkgray;
 }
 
 a.logo {
@@ -85,7 +86,7 @@ a.logo {
 .grid-4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    place-items: center;
+    place-items: start center;
     justify-content: center;
 }
 
@@ -101,6 +102,10 @@ a.logo {
 
 .mb-2 {
     margin-bottom: 2rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
 }
 
 .my-2 {
@@ -134,6 +139,12 @@ a.logo {
 .my-10 {
     margin: 10vh 0;
 }
+
+.py-10 {
+    padding: 10vh 0
+}
+
+// nav
 
 nav {
     padding: 2rem 0;
@@ -206,18 +217,10 @@ ul li a:hover::after {
     opacity: .7;
 }
 
-.section-btn a span {
-    position: absolute;
-    left: 50%;
-    opacity: 0;
-}
+// searchform.php
 
-
-.section-btn a:hover span {
-    left: 85%;
-    opacity: .7;
-    transform: scaleX(1.4);
-    transition: .4s ease-in-out;
+form {
+    justify-self: end;
 }
 
 input {
@@ -241,6 +244,7 @@ button {
 }
 
 
+// single-series-color.php
 
 .top-wrapper {
     img {
@@ -339,23 +343,8 @@ button {
     }
 }
 
-// pager
-.page-numbers {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-    li {
-        margin: 0 .5rem;
-
-        .current {
-
-            text-decoration: underline;
-        }
-    }
-}
-
-// taxonomy
+// taxonomy-serie-color.php
 
 .tax-top {
     width: 100%;
@@ -399,7 +388,6 @@ button {
             width: 100%;
             position: absolute;
             bottom: 0;
-            // left: 5;
             z-index: 1;
             background: rgba(255, 255, 255, .6);
 
@@ -413,7 +401,7 @@ button {
     }
 }
 
-// blog page
+// blog post page: home.php
 
 .home-container {
 
@@ -436,7 +424,7 @@ button {
     }
 }
 
-// aside
+// aside for sidebar.php
 
 aside {
     h3 {
@@ -446,62 +434,7 @@ aside {
 
 
 
-/* trending */
-.section h4 {
-    font-size: 2rem;
-}
-
-.section h2 {
-    font-size: 3rem;
-}
-
-
-.trending-wrapper.grid {
-    /* grid-template-columns: 40% 60%; */
-    place-items: end start;
-    grid-gap: 5vw;
-}
-
-.trending-left img {
-    max-width: 400px;
-    width: 100%;
-}
-
-.trending-left a {
-    padding: 0;
-    color: darkgray;
-    border-bottom: 1px solid darkgray;
-}
-
-.trending-left a:hover {
-    opacity: .6;
-}
-
-.trending-left a:hover::after {
-    width: 0;
-}
-
-.sub.flex {
-    justify-content: flex-start;
-    align-items: flex-end;
-}
-
-.trending-right picture img {
-    max-width: 100%;
-}
-
-/* popular */
-
-.popular-wrapper,
-.archive-wrapper {
-    padding: 10vh 0;
-    /* margin-bottom: 20vh; */
-}
-
-.popular-wrapper.flex {
-    align-items: flex-start;
-    overflow: scroll;
-}
+/* front page popular section */
 
 .popular-article {
     cursor: pointer;
@@ -512,14 +445,7 @@ aside {
     transition: .3s ease-in-out;
 }
 
-.popular-article.flex {
-    flex-direction: column;
-    align-items: flex-start;
-}
 
-small {
-    color: darkgray;
-}
 
 .popular-article {
     width: 300px;
@@ -562,28 +488,37 @@ small {
     transition: .3s ease-in-out;
 }
 
+// search.php: search result page
+// share the same template with archive.php for archive categories, tags, and and dates.
 
-/* series */
-.archive-wrapper.grid {
-    place-items: stretch start;
-    grid-gap: 1rem;
+.result-container {
+
+
+    .result-wrapper {
+        width: 300px;
+
+        img {
+            width: inherit;
+            height: 400px;
+        }
+
+        small a {
+            color: darkgray;
+        }
+
+    }
+
 }
 
-.archive-left small {
-    flex-wrap: wrap;
+// index.php for single post page
+.index-container {
+    &.grid {
+        place-items: start center;
+    }
 }
 
-.archive-right .archive-item:not(:last-of-type) {
-    margin-bottom: 1rem;
-}
 
-.archive-right .archive-item h4 {
-    font-size: 1.2rem;
-}
 
-.archive-right .archive-item.flex {
-    align-items: flex-start;
-}
 
 
 @media screen and (max-width: 768px) {
@@ -651,26 +586,26 @@ small {
     }
 
     // mobile menu
-    ul.flex {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 0vh;
-        overflow: hidden;
-        background: #fff;
-        flex-direction: column;
-        z-index: 10;
-        transition: 0.4s ease-in;
-
-
-        &.active {
-            padding: 30vh 0;
-            height: 100vh;
-        }
-    }
-
     nav {
+        ul.flex {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 0vh;
+            overflow: hidden;
+            background: #fff;
+            flex-direction: column;
+            z-index: 10;
+            transition: 0.4s ease-in;
+
+
+            &.active {
+                padding: 30vh 0;
+                height: 100vh;
+            }
+        }
+
         .menu-item-has-children {
 
 
@@ -708,6 +643,7 @@ small {
     }
 
 
+    // archive-series.php
     .tax-top {
         margin-bottom: 2rem;
 
@@ -727,50 +663,13 @@ small {
         }
     }
 
-    .popular-wrapper.flex,
-    .archive-item.flex {
-        flex-direction: column;
-    }
 
-
-    .text-wrapper {
-        h2 {
-            font-size: 2rem;
-        }
-    }
-
-
-
-
-    .bottom-wrapper {
-        grid-template-columns: auto;
-        place-items: center;
-        margin: 10vh 0 20vh;
-        /* position:absolute;
-      top: 0; */
-    }
-
-    .button-wrapper,
-    .city-wrapper {
-        justify-self: center;
-    }
-
-    .section h4 {
-        font-size: 1.5rem;
-    }
-
-    .section h2 {
+    .section h2,
+    .text-wrapper h2 {
         font-size: 2rem;
     }
 
-    .trending-wrapper.grid {
-        grid-template-columns: auto;
-        place-items: center;
-    }
 
-    .sub.flex {
-        align-items: center;
-    }
 
     .popular-wrapper,
     .archive-wrapper {
@@ -786,13 +685,14 @@ small {
         margin-bottom: 3rem;
     }
 
-    .archive-item h4 {
-        font-size: 1.2rem;
+
+    .index-container {
+        &.grid {
+            place-items: start start;
+        }
     }
 
-    .m-1 {
-        margin: 0.5rem 0;
-    }
+
 }
 
 /*=============== max-width:600px====================*/
